Replace MediaInfo with BWF MetaEdit 64-bit CLI

--- a/tools/License.html
+++ b/tools/License.html
@@ -1,90 +1,75 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <title>MediaInfo(Lib) License</title>
-</head>
-
-<body>
-<div>
-    <h3 style="text-align: center">MediaInfo(Lib) License</h3>
-    <p>
-        Copyright (c) 2002-2019 <a href="mailto:Info@MediaArea.net">MediaArea.net SARL</a>. All rights reserved.
-    </p>
-    <p>
-        Redistribution and use in source and binary forms, with or without modification,
-        are permitted provided that the following conditions are met:
-    </p>
-    <ul>
-        <li>Redistributions of source code must retain the above copyright notice,
-        this list of conditions and the following disclaimer.</li>
-        <li>Redistributions in binary form must reproduce the above copyright notice,
-        this list of conditions and the following disclaimer in the documentation and/or
-        other materials provided with the distribution.</li>
-    </ul>
-    <p>
-        THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS &ldquo;AS IS&rdquo;
-        AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
-        OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE
-        COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
-        EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE
-        GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED
-        AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
-        NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
-        OF THE POSSIBILITY OF SUCH DAMAGE.
-    </p>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<title>BWF MetaEdit license</title>
+</head>
+<body>
+
+<div>
+<h1>BWF MetaEdit license</h1>
+This code was created in 2010 for the Library of Congress and the other federal government agencies participating in the Federal Agencies Digital Guidelines Initiative and it is in the public domain.
+</div>
+
+<div>
+<h1>ZenLib License</h1>
+Copyright (C) 2007-2010 <a href="http://mediaarea.net">MediaArea.net</a>, <a href="mailto:Info@MediaArea.net?Subject=ZenLib">Info@MediaArea.net</a><br />
+<br />
+This software is provided 'as-is', without any express or implied warranty. In no event will the authors be held liable for any damages arising from the use of this software.<br />
+<br />
+Permission is granted to anyone to use this software for any purpose, including commercial applications, and to alter it and redistribute it freely, subject to the following restrictions:
+<ol>
+<li>The origin of this software must not be misrepresented; you must not claim that you wrote the original software. If you use this software in a product, an acknowledgment in the product documentation would be appreciated but is not required.</li>
+<li>Altered source versions must be plainly marked as such, and must not be misrepresented as being the original software.</li>
+<li>This notice may not be removed or altered from any source distribution.</li>
+</ol>
+</div>
+
+<div>
+<h1>TinyXML License</h1>
+<a href="http://www.sourceforge.net/projects/tinyxml">www.sourceforge.net/projects/tinyxml</a><br />
+Original code (2.0 and earlier) copyright (c) 2000-2006 Lee Thomason (<a href="http://www.grinninglizard.com">www.grinninglizard.com)</a><br />
+<br />
+This software is provided 'as-is', without any express or implied warranty. In no event will the authors be held liable for any damages arising from the use of this software.<br />
+<br />
+Permission is granted to anyone to use this software for any purpose, including commercial applications, and to alter it and redistribute it freely, subject to the following restrictions:
+<ol>
+<li>The origin of this software must not be misrepresented; you must notclaim that you wrote the original software. If you use this software in a product, an acknowledgment in the product documentation would be appreciated but is not required.</li>
+<li>Altered source versions must be plainly marked as such, and must not be misrepresented as being the original software.</li>
+<li>This notice may not be removed or altered from any source distribution.</li>
+</ol>
+</div>
+
+<div>
+<h1>MD5 License</h1>
+This code implements the MD5 message-digest algorithm.<br />
+The algorithm is due to Ron Rivest.  This code was written by Colin Plumb in 1993, no copyright is claimed.<br />
+This code is in the public domain; do with it what you wish.<br />
+</div>
+
+<div>
+<h1>Qt License</h1>
+Copyright (C) 2009 <a href="http://qt.nokia.com">Nokia Corporation</a> and/or its subsidiary(-ies).<br />
+Contact: Nokia Corporation (<a href="mailto:qt-info@nokia.com">qt-info@nokia.com</a>)<br />
+<br />
+Commercial Usage<br />
+Licensees holding valid Qt Commercial licenses may use this file in accordance with the Qt Commercial License Agreement provided with the Software or, alternatively, in accordance with the terms contained in a written agreement between you and Nokia.<br />
+<br />
+GNU Lesser General Public License Usage<br />
+Alternatively, this file may be used under the terms of the GNU Lesser General Public License version 2.1 as published by the Free Software Foundation and appearing in the file LICENSE.LGPL included in the packaging of this file.  Please review the following information to ensure the GNU Lesser General Public License version 2.1 requirements will be met: <a href="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html">http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html</a>.
+<br />
+In addition, as a special exception, Nokia gives you certain additional rights. These rights are described in the Nokia Qt LGPL Exception version 1.0, included in the file LGPL_EXCEPTION.txt in this package.<br />
+<br />
+GNU General Public License Usage<br />
+Alternatively, this file may be used under the terms of the GNU General Public License version 3.0 as published by the Free Software
+Foundation and appearing in the file LICENSE.GPL included in the packaging of this file.  Please review the following information to
+ensure the GNU General Public License version 3.0 requirements will be met: <a href="http://www.gnu.org/copyleft/gpl.html">http://www.gnu.org/copyleft/gpl.html</a>.
 </div>
 
-<hr/>
-<div>
-<p>Alternate open source licenses:<br/>
-You can relicense (including source headers change) MediaInfo
-under Apache License 2.0 or later,
-and/or GNU Lesser General Public License 2.1 or later,
-and/or GNU General Public License 2.0 or later,
-and/or Mozilla Public License 2.0 or later.</p>
-</div>
-
-<hr/>
-<div>
-<p>Alternate license for redistributions of the library in binary form:<br/>
-Redistributions in binary form must reproduce the following sentence (including the link to the website) in the documentation and/or other materials provided with the distribution.<br/>
-This product uses <a href="http://mediaarea.net/MediaInfo">MediaInfo</a> library, Copyright (c) 2002-2019 <a href="mailto:Info@MediaArea.net">MediaArea.net SARL</a>.</p>
-</div>
-
-<hr/>
-<div>
-    <h3 style="text-align: center">Third party libraries</h3>
-    <p>
-        The software relies on third party libraries. Such libraries have their own license:
-    </p>
-        <ul>
-            <li>C++ standard library: <a href="http://gcc.gnu.org/onlinedocs/libstdc++/manual/bk01pt01ch01s02.html">libstdc++</a>,
-                <a href="http://llvm.org/docs/DeveloperPolicy.html#license">libc++</a>,
-                <a href="http://msdn.microsoft.com/en-us/library/vstudio/ms235299.aspx">Visual C++ library</a> or any other C++ standard library.
-            </li>
-            <li>Base classes library: ZenLib, (c) MediaArea.net SARL, zlib license.</li>
-            <li>GUI (optional): <a href="http://qt-project.org/products/licensing">Qt</a>.</li>
-            <li>GUI (optional): <a href="http://www.wxwidgets.org/about/newlicen.htm">WxWidgets</a>.</li>
-            <li>XML parser (optional): <a href="http://www.grinninglizard.com/tinyxml2docs/index.html">TinyXML-2</a>.</li>
-            <li>gzip decompression routine (optional): <a href="http://www.gzip.org/zlib/zlib_license.html">zlib</a>.</li>
-            <li>FTP, FTPS, SFTP, HTTP, HTTPS (optional): <a href="http://curl.haxx.se/docs/copyright.html">libcurl</a>.</li>
-            <li>AES (optional): <a href="http://brgladman.org/oldsite/AES/">AES routines from Brian Gladman</a>.</li>
-            <li>MMS (optional): <a href="http://sourceforge.net/projects/libmms/">libmms</a>.</li>
-        </ul>
-</div>
-
-<hr/>
-<div>
-    <h3 style="text-align: center">Contributors</h3>
-    <ul>
-        <li>Jérôme Martinez (main developper)</li>
-        <li>Lionel Duchateau (odd formats support)</li>
-        <li>XhmikosR from MPC-HC Team (tests)</li>
-        <li>FlylinkDC++ team (tests, crash corrections)</li>
-        <li>Max Pozdeev (former native Mac GUI developper)</li>
-    </ul>
-</div>
-
-</body>
-</html>
+<div>
+<h1>Tango Desktop Project License</h1>
+This code incorporations icons from the Tango Desktop Project icon set, available at <a href="http://tango.freedesktop.org/Tango_Desktop_Project">http://tango.freedesktop.org/Tango_Desktop_Project</a>. These icons are released to the Public Domain.<br />
+
+</div>
+</body>
+</html>
